ejercicio5_3/manifests/greeter-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter
  namespace: default
spec:
  parentRefs:
  - name: greeter-svc
    namespace: default
  rules:
  - matches:
    - path:
        type: Prefix
        value: /greeting
    backendRefs:
    - name: greeter-svc-v1
      port: 80
      weight: 75
    - name: greeter-svc-v2
      port: 80
      weight: 25
